# Stock-Screener-Agent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  set_env_vars.ps1  template.py
config/: config.yaml  sector_map.yaml  sources.yaml
research/: 00_ticker_parsing.ipynb  01_fetch_data.ipynb  01_ticker_parsing.ipynb  02_fetch_data.ipynb  03_features.ipynb
research/demo/: demo.py  demo_db.py
src/StockScreener/utils/: common.py  logger.py
