[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Stock-Screener-Agent"
version = "0.0.1"
authors = [
    { name="Vish501" }
]
description = "Stock screening agent"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/Vish501/Stock-Screener-Agent"
Issues = "https://github.com/Vish501/Stock-Screener-Agent/issues"